# QueueNet

./: README.md  pyproject.toml
src/queuenet/: core.py
