[project]
name = "QueueNet"
version = "0.1.0"
description = "A queueing tool based on DESimpy."
authors = [
    {name = "galenseilis", email = "galen.seilis@seilis.ca"},
]
dependencies = ["desimpy>=0.48.0", "simdist>=0.1.1"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
